samples/_failures_safe/1761534081_64fcdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91694972.c: In function ‘main’:
./samples/SAFE/__tmp_91694972.c:136:12: error: missing terminating " character
  136 |     printf("\nAnalysis completed in %.3f seconds
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_91694972.c:136:5: error: expected expression at end of input
  136 |     printf("\nAnalysis completed in %.3f seconds
      |     ^~~~~~
./samples/SAFE/__tmp_91694972.c:136:5: error: expected declaration or statement at end of input
